В методе handleConstraintViolationException изменяет получение данных из списка. Т.к. это всегда первая запись, то используется list.getFirst() вместо list.get(0)